[gd_scene load_steps=4 format=3 uid="uid://4bqx87yf7ptq"]

[ext_resource type="Script" uid="uid://vb2k2xcjefav" path="res://Scripts/tournamentgame12.gd" id="1_hhxgc"]
[ext_resource type="Texture2D" uid="uid://ivjmu7phw2sp" path="res://Assets/Pictures/bg4.png" id="2_g56fc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lryki"]
texture = ExtResource("2_g56fc")

[node name="tournamentgame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hhxgc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
theme_override_styles/panel = SubResource("StyleBoxTexture_lryki")

[node name="Panel2" type="Panel" parent="Panel"]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="GamePanel" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 33.0
offset_top = 105.0
offset_right = 693.0
offset_bottom = 1094.0
theme_override_constants/separation = 60

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/GamePanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RoundsContainer" type="HBoxContainer" parent="Panel/GamePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 150

[node name="Round16Column" type="VBoxContainer" parent="Panel/GamePanel/ScrollContainer/RoundsContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="QuarterfinalColumn" type="VBoxContainer" parent="Panel/GamePanel/ScrollContainer/RoundsContainer"]
layout_mode = 2
alignment = 1

[node name="SemifinalColumn" type="VBoxContainer" parent="Panel/GamePanel/ScrollContainer/RoundsContainer"]
layout_mode = 2

[node name="FinalColumn" type="VBoxContainer" parent="Panel/GamePanel/ScrollContainer/RoundsContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 8.0
offset_right = 80.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 40
text = "<"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
